se agregaron nuevos tags

--- a/tags.html
+++ b/tags.html
@@ -6,15 +6,64 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tiddy Tittle</h1>
-    <h2>H2</h2>
-    <h3>H3</h3>
-    <h4>H4</h4>
-    <h5>H5</h5>
-    <h6>H6</h6>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et amet quas atque modi officia, blanditiis numquam, ad quos quidem dolores molestiae dolorem voluptas fuga, facilis non. Pariatur doloribus perspiciatis cum.</p>
-    <figure>
-        <img height="300" src="./images/kitty.jpg" alt="cat">
-    </figure>
+    <header><a href="google.com"></a>
+        <nav>
+        <ul>
+            <li><a href=""></a>Home</li>
+            <li><a href=""></a>About Me</li>
+            <li><a href=""></a>My Work</li>
+            <li><a href=""></a>Contact Me</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <h1>This is my page</h1>
+    <hr>
+    <br>
+    <section>
+        <h2>Home</h2>
+        <hr>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et repudiandae, amet enim numquam dignissimos ipsa ipsam laudantium optio consectetur! Ipsam possimus esse natus delectus reiciendis architecto nam inventore explicabo corporis!
+        </p>
+        <figure>
+            <img src="http://loremflickr.com/320/240" />
+        </figure>
+    </section>
+    <br>
+    <section>
+        <h2>About Me</h2>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit architecto harum nam magni impedit, sint repellat laudantium sequi qui eligendi eius ratione culpa cum consectetur. Incidunt omnis fugit veniam nihil.</p>
+        <figure>
+            <img src="http://loremflickr.com/320/240" alt="">
+        </figure>
+    </section>
+    <section>
+        <h2>My Work</h2>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit architecto harum nam magni impedit, sint repellat laudantium sequi qui eligendi eius ratione culpa cum consectetur. Incidunt omnis fugit veniam nihil.</p>
+        <figure>
+            <img src="http://loremflickr.com/320/240" alt="">
+        </figure>
+       <video width="480" controls>
+           <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+            <source src="https://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+                Your browser does not support HTML5 video.
+       </video>
+    </section>
+    <section>
+        <h2>Contact Me</h2>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit architecto harum nam magni impedit, sint repellat laudantium sequi qui eligendi eius ratione culpa cum consectetur. Incidunt omnis fugit veniam nihil.</p>
+        <form action="">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Apellido">
+            <button>Enviar</button>
+            <button type="reset">Reset</button>
+        </form>
+    </section>
+
+</main>
 </body>
 </html>
